# Kore-Package-Manager

./: .gitignore  CHANGELOG.md  CHANGELOG_es.md  CONTRIBUTING.md  CONTRIBUTING_es.md  Cargo.toml  LICENSE  README.md  README_es.md  community_repos.json  default_repos.json  install.sh  shell.nix  tm  tm.sh
.github/workflows/: release.yml
assets/: community_repos.json  default_repos.json  kpm.desktop
assets/completions/bash/: kpm.bash  tm
assets/completions/fish/: kpm.fish  tm.fish
assets/completions/zsh/: _kpm  _tm
src/: cli.rs  config.rs  core.rs  download.rs  error.rs  lib.rs  main.rs  repo.rs  tui.rs  utils.rs
src/config/: mod.rs  settings.rs
src/core/: download.rs  install.rs  manager.rs  mod.rs  nixify.rs  repo.rs
src/core/dynamic_links/: antigravity.rs  blender.rs  jetbrains.rs  mod.rs  sublime.rs  tor.rs  waterfox.rs
src/core/install/: appimage.rs  desktop.rs  extract.rs  mod.rs  nixos.rs  operations.rs  resolve.rs  update.rs  utils.rs
src/tui/: handlers.rs  mod.rs  state.rs  ui.rs
src/tui/components/: app_manager.rs  file_browser.rs  installer.rs  main_menu.rs  mod.rs  popups.rs  repo_manager.rs
src/utils/: fs.rs  mod.rs
