[package]
name = "tm"
version = "1.2.2"
edition = "2021"
description = "Tarball Manager (tm) - Edition 2026"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
crossterm = "0.29.0"
dialoguer = "0.10"
directories = "5.0"
ratatui = "0.30.0"
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = "0.3.23"
walkdir = "2.3"
