[package]
name = "kpm"
version = "2.0.0"
edition = "2021"
description = "Kore Package Manager (kpm) - Edition 2026"
default-run = "kpm"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
crossterm = "0.29.0"
dialoguer = "0.10"
directories = "5.0"
ratatui = "0.30.0"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = "0.3.23"
walkdir = "2.3"
regex = "1.10"
clap_complete = "4.6.2"
base64 = "0.22.1"
goblin = "0.10.1"
sha2 = "0.10.9"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
